--- a/CustoDN/CustoDN.Domain/CustoDN.Domain.csproj
+++ b/CustoDN/CustoDN.Domain/CustoDN.Domain.csproj
@@ -59,7 +59,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="A.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="INexusRepository.cs" />
     <Compile Include="Nexus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
