--- a/CustoDN/CustoDN.Web/packages.config
+++ b/CustoDN/CustoDN.Web/packages.config
@@ -3,9 +3,15 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.2" targetFramework="net45" />
+  <package id="Common.Logging" version="2.2.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Foundation5.Core.Sass" version="5.3" targetFramework="net45" />
   <package id="Foundation5.MVC.Sass" version="2.0.530" targetFramework="net45" />
+  <package id="Highway.Data" version="5.1.1.0" targetFramework="net45" />
+  <package id="Highway.Data.EntityFramework" version="5.1.1.0" targetFramework="net45" />
+  <package id="Highway.Pavement" version="0.3.0.0" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
