Scrapped the INexusRepository and instead there is now the CustoDNRepository which inherits from Repository (Nexus now uses InMemoryDataContext by default), added a Copy method to Customer, and improved/changed Customer CRUD operations (one thing worth noting is I changed Update to UpdateOrAdd; I couldn't get a pure update method to work).

--- a/CustoDN/CustoDN.Web/CustoDN.Web.csproj
+++ b/CustoDN/CustoDN.Web/CustoDN.Web.csproj
@@ -217,7 +217,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Persistence\SqlNexusRepository.cs" />
+    <Compile Include="Persistence\CustoDNRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
