--- a/CustoDN/CustoDN.Web/CustoDN.Web.csproj
+++ b/CustoDN/CustoDN.Web/CustoDN.Web.csproj
@@ -376,7 +376,6 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\_RemoveAccountPartial.cshtml" />
@@ -389,6 +388,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\_Create.cshtml" />
+    <Content Include="Views\Home\foundation.cshtml" />
+    <Content Include="Views\Home\Home.cshtml" />
+    <Content Include="Views\Customer\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
