Changed ResolverConfig to register a MappingConfig, a DataContext(including the DefaultConnection string), and a Repository, moved MappingConfig to its own file and deleted CustoDNRepository.cs, removed default constructor from Nexus (now it must be given an IRepository; that should be taken care of by Autofac), added A and An classes to CustoDN.Web that inherit from the ones in Domain, and added a few methods to A and An for use with tests.

--- a/CustoDN/CustoDN.Domain/CustoDN.Domain.csproj
+++ b/CustoDN/CustoDN.Domain/CustoDN.Domain.csproj
@@ -67,11 +67,13 @@
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="A.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="MappingConfig.cs" />
     <Compile Include="Nexus.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
