--- a/CustoDN/CustoDN.Web.Tests/CustoDN.Web.Tests.csproj
+++ b/CustoDN/CustoDN.Web.Tests/CustoDN.Web.Tests.csproj
@@ -121,7 +121,16 @@
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App.config" />
+    <Content Include="App.config">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="aspnet-CustoDN.Web-20140721095214.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="aspnet-CustoDN.Web-20140721095214_log.ldf">
+      <DependentUpon>aspnet-CustoDN.Web-20140721095214.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
